Restructure project into multi-module build with inline optimizations
- Reorganize Scala sources into polars/ and plotting/ modules
- Fix build-native.sh to detect GraalVM in coursier cache
- Add inline keywords to all eligible functions for better performance:
  * PolarsJNI wrapper methods
  * DataFrameOps IO functions
  * PlotlyData factory methods and given instances
  * PlotlyRenderer and utility functions
- Configure multi-module sbt build with proper target directories

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>